# bamboo

./: CMakeLists.txt  Column.h  LICENSE.txt  README  README.md  main1.cpp  main2.cpp  main3.cpp  main4.cpp  vpt.cpp
apps/: CMakeLists.txt  actions.txt  vpt.cpp
include/index/: ArrayIndex.h  HashIndex.h  Index.h
include/relation/: Column.h  Relation.h
include/string/: StrIntern.h  StrInternHash.h
index/: ArrayIndex.h  HashFunction.h  HashIndex.h  Index.h  IndexIterator.h
relation/: Column.h  Relation.h  Variations.h
src/main/cpp/: Bucket.h  HashFunction.h  HashTable.h  Tree.h
src/test/cpp/: simple.cpp
tests/: CMakeLists.txt  advancedTests.cpp  basicTests.cpp
tests/unitTests/: CMakeLists.txt  advancedTests.cpp  basicTests.cpp  dummy.cpp
